--- a/game.html
+++ b/game.html
@@ -34,18 +34,7 @@ body {
 #intro-text { color: #4b0082; font-size: 8vw; font-weight: bold; margin-bottom: 3vh; word-break: keep-all; }
 #kitten-container { position: relative; margin-bottom: 3vh; }
 #kitten-img { max-width: 220px; height: auto; margin-bottom: 3vh; }
-
-/* 電腦出拳位置固定 */
-#computer-choice {
-    position: absolute;
-    bottom: 0;
-    left: -30px; /* 左側稍微重疊小貓 */
-    max-width: 70px;
-    height: auto;
-    z-index: 2;
-    transform: none;
-}
-
+#computer-choice { position: absolute; left: -20px; bottom: 0px; width: 120px; height: auto; z-index: 2; }
 #emoji-display { font-size: 45vw; position: absolute; top: 52%; left: 50%; transform: translate(-50%, -50%); pointer-events: none; line-height: 1; z-index: 5; }
 
 .choice-buttons { display: flex; gap: 30px; margin-bottom: 3vh; }
@@ -65,7 +54,7 @@ body {
 .player-buttons img { width: 70px; height: 70px; cursor: pointer; opacity: 0; transform: translateY(20px); transition: opacity 0.8s, transform 0.8s; }
 
 /* 彩屑和素材掉落樣式 */
-.falling-item { position: fixed; pointer-events: none; top: -50px; animation-name: fall; animation-timing-function: ease-in; animation-fill-mode: forwards; }
+.falling-item { position: fixed; pointer-events: none; top: -50px; animation-name: fall; animation-timing-function: ease-in; animation-fill-mode: forwards; z-index: 10; }
 @keyframes fall { 0% { transform: translateY(0) rotate(0deg); opacity:1; } 100% { transform: translateY(100vh) rotate(360deg); opacity:0; } }
 </style>
 </head>
@@ -122,7 +111,11 @@ let loseCount = 0;
 let drawCount = 0;
 
 // 小貓台詞
-const dialogue = { /* 保留你原本的台詞設定 */ };
+const dialogue = {
+    'Win': { 1:["…咪只是大意了！下局才不會輸給你呢！😖","才、才不是讓你啦！再來一次本咪一定贏！😡","本咪今天狀態不好而已…再玩一局嘛？😫"] },
+    'Lose': { 1:["咪贏了！要再來一局嗎？😝"] },
+    'Draw': { 1:["喵？平手？！那…再來一次！😛"] }
+};
 
 // 初始淡入
 setTimeout(()=>{introText.classList.add('visible');}, 200);
@@ -132,7 +125,8 @@ setTimeout(()=>{choiceBtns.style.visibility='visible'; choiceBtns.classList.add(
 // 點擊不樂意
 noBtn.addEventListener('click',()=>{
     noClickCount++;
-    emojiDisplay.textContent = noClickCount === 1 ? '🥺' : '🥹';
+    if(noClickCount===1) emojiDisplay.textContent='🥺';
+    else emojiDisplay.textContent='🥹';
 });
 
 // 點擊很樂意
@@ -155,7 +149,7 @@ yesBtn.addEventListener('click',()=>{
     },1800);
 });
 
-// 顯示台詞
+// 顯示台詞一個字一字
 function showDialogue(text){
     dialogueText.textContent = '';
     let i=0;
@@ -171,11 +165,14 @@ playerButtons.forEach(btn=>{
     btn.addEventListener('click',()=>{
         const playerChoice = btn.getAttribute('data-choice');
         const computerChoiceFile = computerOptions[Math.floor(Math.random()*3)];
-        
-        // 更新電腦出拳圖片，位置固定
         computerChoiceImg.src = computerChoiceFile;
-        computerChoiceImg.className = '';
 
+        // 電腦出拳固定大小與位置
+        computerChoiceImg.style.width = '120px';
+        computerChoiceImg.style.left = '-20px';
+        computerChoiceImg.style.bottom = '0px';
+
+        // 第一次點擊淡出準備好了嗎？
         if(firstClick){
             statusText.style.display='none';
             hintText.style.display='none';
@@ -204,27 +201,18 @@ playerButtons.forEach(btn=>{
         else if(result==='Draw') resultDiv.innerHTML = `<img src="Draw.png" style="max-width:150px;">`;
 
         // 顯示隨機台詞
-        let dialogueList;
-        if(result==='Win'){
-            dialogueList= winCount<2 ? dialogue['Win'][1] : winCount<4 ? dialogue['Win'][2] : winCount<5 ? dialogue['Win'][4] : dialogue['Win'][5];
-            winCount++; loseCount=0; drawCount=0;
-        } else if(result==='Lose'){
-            dialogueList= loseCount<2 ? dialogue['Lose'][1] : loseCount<4 ? dialogue['Lose'][2] : loseCount<5 ? dialogue['Lose'][4] : dialogue['Lose'][5];
-            loseCount++; winCount=0; drawCount=0;
-        } else if(result==='Draw'){
-            dialogueList= drawCount<2 ? dialogue['Draw'][1] : dialogue['Draw'][2];
-            drawCount++;
-        }
+        const dialogueList = dialogue[result][1];
         const dialogueTextToShow = dialogueList[Math.floor(Math.random()*dialogueList.length)];
         showDialogue(dialogueTextToShow);
 
-                // 玩家勝利掉落素材 + 彩屑
+        // 玩家勝利掉落素材 + 彩屑
         if(result==='Win'){
             const fallingItems=['c.png','ch.png','pp.png'];
             const colors=['#f94144','#f3722c','#f9c74f','#90be6d','#43aa8b','#577590','#f72585','#7209b7'];
             for(let i=0;i<60;i++){
                 const item=document.createElement('img');
-                item.src=fallingItems[Math.floor(Math.random()*fallingItems.length)];
+                const file=fallingItems[Math.floor(Math.random()*fallingItems.length)];
+                item.src=file;
                 item.className='falling-item';
                 item.style.left=Math.random()*100+'vw';
                 const scale=1 + Math.random()*1.0;
